docs: two new posts

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,20 +1,35 @@
-
 <div class="col s12 tag-div">
-  <div class="user-pic center-align">
-    <a href="{{site.github_profile}}" target="_blank"><img class="hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.png"></a>
-  </div>
-  <div class="user-intro center-align">
-    <h4 class="hidden">I am a <span id="js-rotating">So Simple, Very Confident, Much Work, Such Cool</span> Full Stack Developer</h4>
-  </div>
-  <div class="user-content">
-    <p>
-      于2020年6月毕业于<a href="http://www.zstu.edu.cn/" target="_blank">浙江理工大学</a>。户籍江苏宿迁人，苏漂一枚。喜欢苏南的生活。
-    </p>
-    <p>
-      自信，果敢，明白自己想要什么的小男孩。爱好：运动（足球，羽毛球，跑步 or 骑行），旅行，英雄联盟，听音乐（语音不全的仔）。
-    </p>
-    <p>
-      当然首要是学习，不光是为了生活更重要的是兴趣。<strong style="font-weight: 900;">目标是干一番大事业。</strong>
-    </p>
-  </div>
+    <div class="user-pic center-align">
+        <a href="{{site.github_profile}}" target="_blank"
+            ><img
+                class="hoverable z-depth-1"
+                src="{{site.baseurl}}/assets/res/user.png"
+        /></a>
+    </div>
+    <div class="user-intro center-align">
+        <h4 class="hidden">
+            I am a
+            <span id="js-rotating"
+                >So Simple, Very Confident, Much Work, Such Cool</span
+            >
+            Full Stack Developer
+        </h4>
+    </div>
+    <div class="user-content">
+        <p>
+            于2020年6月毕业于<a href="http://www.zstu.edu.cn/" target="_blank"
+                >浙江理工大学</a
+            >。户籍江苏宿迁人。
+        </p>
+        <p>
+            自信，果敢，明白自己想要什么的小男孩。爱好：运动（足球，羽毛球，跑步
+            or 骑行），旅行，英雄联盟，听音乐（语音不全的仔）。
+        </p>
+        <p>
+            当然首要是学习，不光是为了生活更重要的是兴趣。<strong
+                style="font-weight: 900"
+                >目标是干一番大事业。</strong
+            >
+        </p>
+    </div>
 </div>
