feat: improve the ui of code block

--- a/assets/css/post.sass
+++ b/assets/css/post.sass
@@ -13,20 +13,29 @@ main
       margin: 10px 0
 
     &.highlighter-rouge
-      margin: 1em 20px
+      margin: 1.5em 0
+      border-radius: 8px
+      overflow: hidden
 
       pre
-        padding: 5px
+        padding: 1.2em 1.5em
+        margin: 0
+        border-radius: 8px
 
   figure
     &.highlight
-      margin: 1em 20px
+      margin: 1.5em 0
+      border-radius: 8px
+      overflow: hidden
+      position: relative
 
       pre
-        white-space: pre-wrap
+        white-space: pre
+        overflow-x: auto
 
       table
-        width: auto
+        width: 100%
+        margin: 0
 
 #post-info
   h3
